add a presentation variant to STARVote

--- a/star-terminal/static/css/site.css
+++ b/star-terminal/static/css/site.css
@@ -1,5 +1,1 @@
-.summary-item {
-  border-bottom: 1px solid #eee;
-}
-.content { padding-bottom: 10em; }
-input[type="radio"].unlabelled { margin-left: 0px; }
+solid-select.css
